fix: pricing/product page reduce margin on small viewports.

--- a/src/pages/Product.module.css
+++ b/src/pages/Product.module.css
@@ -1,11 +1,10 @@
 .product {
   margin: 2.5rem;
   padding: 2.5rem 5rem;
-  height: calc(100vh - 5rem);
-  /* @media (max-width: 950px) {
+  height: calc(100vh - 1rem);
+  @media (max-width: 950px) {
     margin: 1rem;
-    padding: 1rem;
-  } */
+  }
   background-color: var(--color-dark--1);
 }
 
